# superteam

./: .gitignore  AGENTS.md  README.md  pyproject.toml
agents/audits/: README.md
agents/plans/: 2026-03-31-markdown-audit-cutover-plan.md  2026-03-31-module-cutover-implementation.md  README.md
docs/: architecture.md
scripts/: example.py
src/superteam/: __init__.py
src/superteam/cli/: audit.py  main.py  result.py  run.py  sessions.py  status.py  watch.py
src/superteam/core/: __init__.py  contracts.py  loop.py  modules.py  observe.py  providers.py  session.py
src/superteam/modules/: __init__.py  testing.py
src/superteam/modules/claude_code/: __init__.py  config.py  runner.py
src/superteam/modules/codex/: __init__.py  config.py  runner.py
src/superteam/pipelines/: __init__.py  code-review-loop.yaml  qa-loop.yaml  write-and-critique.yaml
src/superteam/providers/: __init__.py  testing.py
src/superteam/providers/_template/: runner.py
src/superteam/providers/claude_api/: __init__.py  client.py  config.py
src/superteam/providers/claude_code/: __init__.py  runner.py
src/superteam/providers/openrouter/: __init__.py  client.py  config.py
src/superteam/runtime/: __init__.py  config.py  pipeline.py
tests/: conftest.py  test_cli.py  test_config.py  test_contracts.py  test_loop.py  test_modules.py  test_modules_smoke.py  test_pipeline.py  test_providers.py  test_providers_smoke.py  test_session.py
