[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "superteam"
version = "0.1.0"
description = "A Python harness for non-interactive builder/auditor loops across full agent modules."
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["typer>=0.12,<1", "PyYAML>=6.0,<7"]

[project.optional-dependencies]
cli = []
dev = ["pytest>=8.0,<9"]

[project.scripts]
superteam = "superteam.cli.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"superteam.pipelines" = ["*.yaml"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
